fixed right pane alignment,completed desktop layout

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -167,6 +167,7 @@ svg {
   #indicators-row {
     max-height: 15vh;
     height: 15vh;
+    margin-bottom: 10% !important;
   }
   .pad-row {
     margin: 0 0 5% 0;
@@ -176,6 +177,7 @@ svg {
     margin: 0;
     //margin-bottom: 10%;
     padding: 0;
+    margin-bottom: 1% !important;
     // background-color: red;
   }
 
